Remove GL check from Renderer glLinkProgram()

Was catching spurious Qt 6.6.2 error:
GL_INVALID_OPERATION in glDrawBuffers(unsupported buffer GL_BACK_LEFT)

https://bugreports.qt.io/browse/QTBUG-122819